# meeting_notes

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LOCAL_TRANSCRIPTION_GUIDE.md  README.md  SPEAKER_DIARIZATION_GUIDE.md  config.ini.example  local_transcription.py  main.py  pending_tasks.md  pyproject.toml  requirements.txt  speaker_diarization.py  test_speakers.py  whisper_cpp_backend.py
src/: __init__.py  ai.py  audio.py  obsidian.py  processor.py  speakers.py  transcribe.py
templates/: default.json
